[package]
name = "bvh_anim"
version = "0.4.0"
authors = ["George Burton <burtonageo@gmail.com>"]
repository = "https://github.com/burtonageo/bvh_anim"
documentation = "https://docs.rs/bvh_anim/"
readme = "Readme.md"
edition = "2018"
description = "A .bvh file parser"
keywords = ["bvh", "biovision", "parser", "animation", "skeletal"]
categories = ["rendering::data-formats"]
license = "MIT"
build = "build.rs"
exclude = ["./fuzz", "./data"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[package.metadata.docs.rs]
features = ["ffi"]

[dependencies]
bstr = "0.2"
lexical = "2.2"
mint = "0.5"
num-traits = "0.2"
nom = "4.2"
smallvec = "0.6"

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.cfile]
version = "0.5"
optional = true

[dependencies.foreign-types]
version = "0.4"
optional = true

[dependencies.pkg-version]
version = "0.1.0"
optional = true

[build-dependencies.cc]
version = "1.0"
optional = true

[build-dependencies.cbindgen]
version = "0.9"
optional = true

[dev-dependencies]
pretty_assertions = "0.6.1"
glutin = "0.21"
gl = "0.12"
nalgebra = "0.18.0"

[features]
ffi = ["cfile", "foreign-types", "libc", "pkg-version"]
bindings = ["cbindgen", "ffi"]
# This feature is utterly broken and (will) only be useful for testing
ctests = ["bindings", "cc"]
