[package]
name = "bvh_anim"
version = "0.4.0"
authors = ["George Burton <burtonageo@gmail.com>"]
repository = "https://github.com/burtonageo/bvh_anim"
documentation = "https://docs.rs/bvh_anim/"
readme = "Readme.md"
edition = "2018"
description = "A .bvh file parser"
keywords = ["bvh", "biovision", "parser", "animation", "skeletal"]
categories = ["rendering::data-formats"]
license = "MIT"
build = "build.rs"
exclude = ["./fuzz", "./data"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"
incremental = false

[package.metadata.docs.rs]
features = ["ffi"]

[dependencies]
bstr = "0.2"
lexical = "5.2"
mint = "0.5.6"
num-traits = "0.2"
nom = "6"
smallvec = "1.5"

[dependencies.static_assertions]
version = "1"
optional = true

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.cfile]
version = "0.5"
optional = true

[dependencies.foreign-types]
version = "0.5"
optional = true

[dependencies.pkg-version]
version = "1"
optional = true

[build-dependencies.cc]
version = "1.0"
optional = true

[build-dependencies.cbindgen]
version = "0.16"
optional = true

[dev-dependencies]
pretty_assertions = "0.6.1"
glutin = "0.26"
gl = "0.14"
nalgebra = "0.23"

[features]
ffi = ["cfile", "foreign-types", "libc", "pkg-version", "static_assertions"]
bindings = ["cbindgen", "ffi"]
